[gd_scene load_steps=4 format=3 uid="uid://csygeuktpu167"]

[ext_resource type="Script" uid="uid://dapj2tcpelkyf" path="res://scenes/pipes/pipes.gd" id="1_dq6nu"]
[ext_resource type="PackedScene" uid="uid://3rvk3airt7wu" path="res://scenes/laser/laser.tscn" id="1_ls657"]
[ext_resource type="PackedScene" uid="uid://bfj0ataasuano" path="res://scenes/Pipe/pipe.tscn" id="2_dq6nu"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_dq6nu")

[node name="Laser" parent="." instance=ExtResource("1_ls657")]

[node name="Upper" parent="." instance=ExtResource("2_dq6nu")]
position = Vector2(0, -80)
rotation = 3.14159

[node name="Lower" parent="." instance=ExtResource("2_dq6nu")]
position = Vector2(0, 80)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(198, 0)

[connection signal="body_entered" from="Laser" to="." method="_on_laser_body_entered"]
[connection signal="body_entered" from="Upper" to="." method="_on_pipe_entered"]
[connection signal="body_entered" from="Lower" to="." method="_on_pipe_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
